--- a/docspace/templates/base.html
+++ b/docspace/templates/base.html
@@ -36,6 +36,9 @@
                             <a href="{{ url_for('main.index') }}" class="navbar-item">
                                 <b>Home</b>
                             </a>
+                            <a href="" class="navbar-item">
+                                <b>About</b>
+                            </a>
                             {% if current_user.is_authenticated %}
                             <a href="{{ url_for('main.profile') }}" class="navbar-item">
                                 <b>Profile</b>
@@ -54,6 +57,9 @@
                                 <b>Logout</b>
                             </a>
                             {% endif %}
+                            <a href="" class="navbar-item">
+                                <b>Contact Us</b>
+                            </a>
                         </div>
                     </div>
                 </div>
