--- a/docspace/templates/profile.html
+++ b/docspace/templates/profile.html
@@ -25,19 +25,19 @@
     <header class="modal-card-head">
       <p class="modal-card-title">Create Workspace</p>
     </header>
-    <section class="modal-card-body">
-      <form action="" method="POST">
-        <p class="model-card-subtitle">Workspace Name</p>
-        <label for="workSpaceName">Workspace Name</label><br><br>
-        <input type="text" name="workSpaceName" size="54" id="workSpaceName" required><br><br>
-        <label for="workSpace Desc">Workspace Description</label><br><br>
-        <textarea name="workSpaceDesc" id="workSpaceDesc" cols="53" rows="10" required></textarea>
-      </form>
-    </section>
-    <footer class="modal-card-foot">
-      <button class="button is-block is-info">Create Workspace</button>
-      <button class="button" onclick="closeCreate()">Cancel</button>
-    </footer>
+    <form method="POST">
+      <section class="modal-card-body">
+          <p class="model-card-subtitle">Workspace Name</p>
+          <label for="workSpaceName">Workspace Name</label><br><br>
+          <input type="text" name="workSpaceName" size="54" id="workSpaceName" required><br><br>
+          <label for="workSpace Desc">Workspace Description</label><br><br>
+          <textarea name="workSpaceDesc" id="workSpaceDesc" cols="53" rows="10" required></textarea>
+      </section>
+      <footer class="modal-card-foot">
+        <button class="button is-block is-info" type="submit">Create Workspace</button>
+        <button class="button" onclick="closeCreate()">Cancel</button>
+      </footer>
+    </form>
   </div>
 </div>
 
