--- a/docspace/templates/base.html
+++ b/docspace/templates/base.html
@@ -33,9 +33,11 @@
 
                     <div id="navbarMenuHeroA" class="navbar-menu">
                         <div class="navbar-end">
+                            {% if not current_user.is_authenticated %}
                             <a href="{{ url_for('main.index') }}" class="navbar-item">
                                 <b>Home</b>
                             </a>
+                            {% endif %}
                             <a href="" class="navbar-item">
                                 <b>About</b>
                             </a>
