separated profile css

--- a/docspace/templates/profile.html
+++ b/docspace/templates/profile.html
@@ -1,29 +1,7 @@
 {% extends "base.html" %}
 
 {% block css %}
-<style>
-  .workspace-buttons {
-    margin-left: 53%;
-  }
-
-  label {
-    color: black;
-    font-size: large;
-  }
-
-  #workSpaceName {
-    height: 40px;
-  }
-
-  .card {
-    width: 30%
-  }
-
-  #status {
-    font-weight: lighter;
-    font-size: smaller;
-  }
-</style>
+  <link rel="stylesheet" href="static/profilestyle.css">
 {% endblock%}
 
 {% block content %}
