changed admin/member position

--- a/docspace/templates/profile.html
+++ b/docspace/templates/profile.html
@@ -25,8 +25,13 @@
       {% if current_user.id == note.workSpaceAdminID %}
         <span id="status">&nbsp; - Admin</span></p>
       {% else %}
-        <br><span id="status">Member</span></p>
+        <br><span id="status">&nbsp; - Member</span></p>
       {% endif %}
+    <!-- <button type="button" class="card-header-icon" aria-label="close">
+      <span class="icon">
+        <i class="fa-thin fa-xmark" aria-hidden="true"></i>
+      </span>
+    </button> -->
   </header>
   <div class="card-content">
     <div class="content">
