--- a/docspace/templates/profile.html
+++ b/docspace/templates/profile.html
@@ -8,7 +8,7 @@
 <div>
   <div>
     <h1 class="title">
-      Welcome, {{ name }}!
+      Welcome, {{ name }}!!
     </h1>
   </div>
   <div class="workspace-buttons">
