--- a/docspace/templates/profile.html
+++ b/docspace/templates/profile.html
@@ -15,7 +15,7 @@
     <button class="button is-medium is-danger" onclick="createWork()">+ Create New Workspace</button>
     <button class="button is-medium is-danger" onclick="joinWork()">Join Existing Workspace</button>
   </div>
-</div>
+</div><br><br>
 
 {% for note in user.workSpaces %}
 <div class="card">
