--- a/docspace/templates/profile.html
+++ b/docspace/templates/profile.html
@@ -20,18 +20,25 @@
 <form enctype="multipart/form-data" method="POST" name="uploadDocsForm">
 <div class="file">
   <label class="file-label">
-    <input class="file-input" type="file" name="file" id="file">
-    <span class="file-cta">
-      <span class="file-label">
-        Upload documents
-      </span>
-    </span>
+    <input class="button is-block is-light" type="file" name="file" id="file"><br>
   </label>
   <div>
     <input class="button is-block is-warning is-light" type="submit" name="uploadDocsForm">
   </div>
 </div>
 </form>
+<br>
+
+<div class="card" style="margin-left: 5%; padding-left: 10px;">
+  <header class="card-header">
+    <p class="card-header-title">
+      Uploaded Documents
+    </p>
+  </header>
+  {% for doc in user.files %}
+    {{ doc.filename }} <br>
+  {% endfor %}
+</div>
 
 {% for note in user.workSpaces %}
 <div class="card">
@@ -87,13 +94,13 @@
     <!-- <form name="joinForm" method="POST"> -->
       <section class="modal-card-body">
           <ul>
-            <!-- {% for note in user.workSpaces %}
+            {% for note in user.workSpaces %}
             <li>{{ note.workSpaceName }}</li>
-            {% endfor %} -->
+            {% endfor %}
           </ul>
       </section>
       <footer class="modal-card-foot">
-        <button class="button is-block is-info" type="submit">Join Workspace</button>
+        <button class="button is-block is-info" type="submit" name="joinForm">Join Workspace</button>
         <button class="button" onclick="closeJoin()">Cancel</button>
       </footer>
     <!-- </form> -->
